--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<section class="cards" *ngIf="card">
+<section class="cards" *ngIf="card && feedback">
   <mat-card class="content-title" *ngIf="card.title && card.metadata">
       <mat-card-title>
         {{card.title}}
@@ -9,10 +9,9 @@
   </mat-card>
   <section>
     <img class="card-image" src="{{'assets/print-cards/' +card.card_value.toLowerCase()+card.card_suit.charAt(0).toLowerCase()+'.png'}}"/>
-  <div >
- 
-
-    
+  
+  
+    <div >   
   <div *ngIf="card.card_suit === 'diamond' || card.card_suit === 'club'">
      <!--Puzzles and Counting-->
      <button mat-raised-button color="primary" (click)="showHint()">{{showHintContent?"Hide Hint": "Show Hint to Answer"}}</button>
@@ -100,10 +99,6 @@
          </mat-card>
      </div>
      </div>
- 
-    
-
-
 
 
     <div class="extensions" *ngIf="showExtensionsContent">
@@ -169,7 +164,71 @@
     </mat-card>
    </div>
   </div>
- 
+  
+
   </section>
- 
+  <section class="feedback">
+    <div>
+      Share feedback
+     <form (ngSubmit)="onSubmit()" >
+      <table>
+        <tr>
+          <td>
+            <div>
+              <label for="name">
+                Name
+              </label>
+              <input id="name" name="name" type="text" [(ngModel)]="feedback.name">
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div>
+              <label for="country">
+                Country
+              </label>
+              <input id="country" name="country" type="text" [(ngModel)]="feedback.country">
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div>
+              <label for="email">
+                Email
+              </label>
+              <input id="email" name="email" type="email" [(ngModel)]="feedback.email">
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div>
+              <label for="feedback">
+                Feedback
+              </label>
+              <input id="feedback" name="feedback" type="text" [(ngModel)]="feedback.feedback">
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div hidden="true">
+              <label for="cardtitle">
+              Card title              
+            </label>
+              <input id="cardtitle" name="cardtitle" type="text">
+              {{feedback.cardtitle}}
+            </div>
+          </td>
+        </tr>
+      </table>
+    
+       <p>
+           <button type="submit" mat-raised-button>Submit</button>
+       </p>
+   </form>
+    </div>
+  </section>
 </section>
